# flic

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
sources/include/flic/: Applier.hh  ContainerIndex.hh  Either.hh  FilteredIndex.hh  Index.hh  IntegralIndex.hh  MakeIndex.hh  MappedIndex.hh  Option.hh  OptionIndex.hh  ZippedIndex.hh  lambda.hh  toString.hh
sources/tests/: Applier.cc  Either.cc  FilteredIndex.cc  Index.cc  IntegralIndex.cc  MappedIndex.cc  Option.cc  OptionIndex.cc  ZippedIndex.cc
